diesel_compile_tests/tests/fail/cannot_use_expression_methods_on_tuples.stderr
error[E0599]: the method `is_not_null` exists for tuple `(id, name)`, but its trait bounds were not satisfied
  --> tests/fail/cannot_use_expression_methods_on_tuples.rs:18:29
   |
18 |     users.filter((id, name).is_not_null());
   |                             ^^^^^^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `(diesel::sql_types::Integer, diesel::sql_types::Text): SingleValue`
           which is required by `(columns::id, columns::name): diesel::ExpressionMethods`
           `(diesel::sql_types::Integer, diesel::sql_types::Text): SingleValue`
           which is required by `&(columns::id, columns::name): diesel::ExpressionMethods`
           `&mut (columns::id, columns::name): diesel::Expression`
           which is required by `&mut (columns::id, columns::name): diesel::ExpressionMethods`

error[E0599]: the method `eq_any` exists for tuple `(id, name)`, but its trait bounds were not satisfied
  --> tests/fail/cannot_use_expression_methods_on_tuples.rs:19:29
   |
19 |     users.filter((id, name).eq_any(users.find(1)));
   |                             ^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `(diesel::sql_types::Integer, diesel::sql_types::Text): SingleValue`
           which is required by `(columns::id, columns::name): diesel::ExpressionMethods`
           `(diesel::sql_types::Integer, diesel::sql_types::Text): SingleValue`
           which is required by `&(columns::id, columns::name): diesel::ExpressionMethods`
           `&mut (columns::id, columns::name): diesel::Expression`
           which is required by `&mut (columns::id, columns::name): diesel::ExpressionMethods`
